init with live theme copy

--- a/templates/collection.launch.json
+++ b/templates/collection.launch.json
@@ -15,12 +15,12 @@
         "image_x9DTAf": {
           "type": "image",
           "settings": {
-            "image": "shopify://shop_images/2025_09_15_TFC4289-hires_Kopie_1.png",
-            "mobile_image": "shopify://shop_images/Header_mobile_1_2b9d3089-0318-4de0-8dbb-24803036f7a6.jpg",
-            "text_position": "middle_center",
+            "image": "shopify://shop_images/Header_Web_5e130eb1-fef4-458d-9264-f4c0ff0bba35.jpg",
+            "mobile_image": "shopify://shop_images/Header_mobile_462d4ed3-3e19-480b-8af5-7081459f0dfe.jpg",
+            "text_position": "bottom_center",
             "subheading": "",
-            "title": "Hautfreundlich für deine sensibelsten Stellen",
-            "subtitle": "<p>Period Panty aus natürlich atmungsaktivem Modal für trockenes Tragegefühl.</p>",
+            "title": "Ohne Auslaufen durch den Tag - wild & elegant!",
+            "subtitle": "<p>Neues Premium-Update: Leo-Design trifft auf softes Mesh mit maximalem Schutz durch Fluid Protection® und Super Dry®.</p>",
             "subtitle_html": "",
             "button_1_text": "",
             "button_1_link": "",
