perfomance package applied

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,20 +17,20 @@
     "show_breadcrumbs_collection_mobile": false,
     "heading_color": "#1a1a1a",
     "text_color": "#1a1a1a",
-    "background": "#ffffff",
+    "background": "#ffe6e6",
     "secondary_background": "#ffe6e6",
     "success_color": "#2e9e7b",
     "error_color": "#de2a2a",
-    "header_background": "#ffffff",
+    "header_background": "#ffe6e6",
     "header_text_color": "#cc0807",
-    "footer_background": "#ffffff",
-    "footer_text_color": "#1a1a1a",
-    "primary_button_background": "#cc0807",
+    "footer_background": "#f58e9e",
+    "footer_text_color": "#ffffff",
+    "primary_button_background": "#ff3f46",
     "primary_button_text_color": "#ffffff",
-    "secondary_button_background": "#cc0807",
-    "secondary_button_text_color": "#ffffff",
+    "secondary_button_background": "#f7aea6",
+    "secondary_button_text_color": "#56112a",
     "product_rating_color": "#f58e9e",
-    "product_on_sale_accent": "#cc0807",
+    "product_on_sale_accent": "#ff3f46",
     "product_sold_out_accent": "#cc0807",
     "product_custom_label_background": "#f58e9e",
     "product_custom_label_2_background": "#ffffff",
@@ -46,7 +46,7 @@
     "stagger_blog_posts_apparition": false,
     "reveal_product_media": false,
     "round_color_swatches": true,
-    "color_swatch_config": "Schwarz:#000000\nGrau:#969696\nRosa Rib:rosarib.png\nBotanical Garden: #2A5B4D\nBotanical Gardens: #2A5B4D\nBotanical Garden/ Caribbean Green: Botanical_Green_Caribbean_Green_552e35bf-e9a5-4fe2-8e12-48f19127174e.png\nViolett:#9537A1\nBurgundy Red:#942a3b\nDusky Pink:#e3bcbd\nSporty:sporty_color.png\nRot:#d62c34\nCardinal Red:#d62c34\nLeo:icon_leo.png\nLeo Sienna:icon_leo.png\nLila:#9270AD\nCherry:#A31023\nRose:#F9DBE9\nLilac:#B28EC3\nBerry:#5D1D3B\nGrapefruit:#FFBBB3\nSand:#decbc5\nSienna:#e2bca7\nDark Brown:#642C1D\nHot Coral:#F1514D\nTeal Blue:#98C0D9\nCaribbean Green:#50D3CB\nElectric Blue:#0281d5\nEstate Blue: #19478A\nTeal Blue & Rose:RB_Color.png\nLight Blue & Rose:RL_Color.png\nLight Lilac & Rose:LB_Color.png\nEdelstahl: #969696\nWeiß: #FFFFFF\nOffwhite: #FFFFFF\nLeo/ Raisin: https://cdn.shopify.com/s/files/1/0613/9261/7710/files/Colorswatches_Leo.png?v=1738042773\nLeo Sienna: https://cdn.shopify.com/s/files/1/0613/9261/7710/files/Colorswatches_Leo_Sienna.png?v=1738042774\nCheetah/ Maroon:CheM_Color.png\nMagenta Purple: #a50259\nMix: Farbenmix_Farbauswahl.png\nPeacock: #6381a0\nPurple: #6052ad\nBotanical Garden: #496d73\nDark Purple: #6E0346\nBaton Rouge: #bb3980\nFlambe:#d3507a\nPeach:#ec5800\nInsignia Blue:#303e55\nBeet red:#951A2F\nBright Violet:#5B4A93\nleo brown:#C3A07B\nrusty red:#772D27\nmidnight blue:#223265\niron:#766867\nSchwarz-Weiß: Colorswatch_black_white.png\nBurgundy:#551329\nKhaki:#82A17E\nIvy:#4C5F32\nLeo Sienna / Violet:Icon_Leo_purple.png\nSchwarz / LeoSienna:Icon_Leo_schwarz.png\nBlack / LeoSienna:Icon_Leo_schwarz.png\nPattern Green: Icon_Muster_Gruen.png\nIcy Morn: #E4E5E0\nDark Sage: #556669\nAnthracite: #494E5A\nDuffelbag: #566953\nLavendula: #DABEDF\nLeo Wasabi: Leo_Wasabi.png\nWispy Clouds: #EAD7D0\nLeo/Lavendula: Leo_Lavendula.png\nSchwarz / Trooper: Schwarz_Trooper.png\nSpicy Cinnamon: #AC3925\nFig: #58263D\nOffwhite: #D5CDC1\nSchwarz/Weiß: Colorswatch_black_white.png",
+    "color_swatch_config": "Schwarz:#000000\nGrau:#969696\nRosa Rib:rosarib.png\nBotanical Garden: #2A5B4D\nBotanical Gardens: #2A5B4D\nBotanical Garden/ Caribbean Green: Botanical_Green_Caribbean_Green_552e35bf-e9a5-4fe2-8e12-48f19127174e.png\nViolett:#9537A1\nBurgundy Red:#942a3b\nDusky Pink:#e3bcbd\nSporty:sporty_color.png\nRot:#d62c34\nCardinal Red:#d62c34\nLeo:icon_leo.png\nLeo Sienna:icon_leo.png\nLila:#9270AD\nCherry:#A31023\nRose:#F9DBE9\nLilac:#B28EC3\nBerry:#5D1D3B\nGrapefruit:#FFBBB3\nSand:#decbc5\nSienna:#e2bca7\nDark Brown:#642C1D\nHot Coral:#F1514D\nTeal Blue:#98C0D9\nCaribbean Green:#50D3CB\nElectric Blue:#0281d5\nEstate Blue: #19478A\nTeal Blue & Rose:RB_Color.png\nLight Blue & Rose:RL_Color.png\nLight Lilac & Rose:LB_Color.png\nEdelstahl: #969696\nWeiß: #FFFFFF\nOffwhite: #FFFFFF\nLeo/ Raisin: https://cdn.shopify.com/s/files/1/0613/9261/7710/files/Colorswatches_Leo.png?v=1738042773\nLeo Sienna: https://cdn.shopify.com/s/files/1/0613/9261/7710/files/Colorswatches_Leo_Sienna.png?v=1738042774\nCheetah/ Maroon:CheM_Color.png\nMagenta Purple: #a50259\nMix: Farbenmix_Farbauswahl.png\nPeacock: #6381a0\nPurple: #6052ad\nBotanical Garden: #496d73\nDark Purple: #6E0346\nBaton Rouge: #bb3980\nFlambe:#d3507a\nPeach:#ec5800\nInsignia Blue:#303e55\nBeet red:#951A2F\nBright Violet:#5B4A93\nleo brown:#C3A07B\nrusty red:#772D27\nmidnight blue:#223265\niron:#766867\nSchwarz-Weiß: Colorswatch_black_white.png\nBurgundy:#551329\nKhaki:#82A17E\nIvy:#4C5F32\nLeo Sienna / Violet:Icon_Leo_purple.png\nSchwarz / LeoSienna:Icon_Leo_schwarz.png\nBlack / LeoSienna:Icon_Leo_schwarz.png\nPattern Green: Icon_Muster_Gruen.png\nIcy Morn: #E4E5E0\nDark Sage: #556669\nAnthracite: #494E5A\nDuffelbag: #566953\nLavendula: #DABEDF\nLeo Wasabi: Leo_Wasabi.png",
     "show_vendor": false,
     "show_secondary_image": true,
     "product_add_to_cart": true,
@@ -83,7 +83,7 @@
     "upsell_discount_icon2": "shopify://shop_images/Vector_1_626489fe-6b4c-4525-8753-3bf6211937f5.svg",
     "upsell_discount_progress_goal2": 5,
     "upsell_discount_value2": 15,
-    "a_b_test_products": [],
+    "a_b_test_product_id": 0,
     "checkout_logo_image": "shopify://shop_images/TheFemaleCompany_Logo_Tomato_04b8553b-b2a9-41dd-ae06-bb33e0ed2df8.png",
     "checkout_logo_size": "small",
     "checkout_body_background_color": "#fff0f0",
