--- a/templates/collection.launch-kollektion-2.json
+++ b/templates/collection.launch-kollektion-2.json
@@ -32,12 +32,12 @@
         "image_hq3Cbp": {
           "type": "image",
           "settings": {
-            "image": "shopify://shop_images/Header_Web__1_86b6ef82-92b9-414d-913b-d06bfe62c426.jpg",
-            "mobile_image": "shopify://shop_images/Header_mobile_6a3d0413-8a45-4087-8aa4-32cd8b5e987b.jpg",
+            "image": "shopify://shop_images/Header_Web__19.jpg",
+            "mobile_image": "shopify://shop_images/Header_mobile_13_cf0a6369-bf98-42da-9e83-9615e3843168.jpg",
             "text_position": "middle_center",
             "subheading": "",
-            "title": "Unterwäsche ohne Saugeinlage aus 100% Bio-Baumwolle",
-            "subtitle": "<p>Unser OEKO-TEX® zertifiziertes Unterwäsche Doppelpack überzeugt durch ein federleichtes Tragegefühl - ohne klassisches Waistband. Für jeden Tag.</p>",
+            "title": "New: Lace Mesh",
+            "subtitle": "<p>Sexy, bequem & sicher – unsere Lace Mesh Period Collection ist too hot to hide!</p>",
             "subtitle_html": "",
             "button_1_text": "",
             "button_1_link": "",
