--- a/templates/collection.launch.json
+++ b/templates/collection.launch.json
@@ -15,12 +15,12 @@
         "image_x9DTAf": {
           "type": "image",
           "settings": {
-            "image": "shopify://shop_images/Header_Web_5e130eb1-fef4-458d-9264-f4c0ff0bba35.jpg",
-            "mobile_image": "shopify://shop_images/Header_mobile_462d4ed3-3e19-480b-8af5-7081459f0dfe.jpg",
-            "text_position": "bottom_center",
+            "image": "shopify://shop_images/2025-08-18_THE-FEMALE-COMPANY-5356_erweitert_1.png",
+            "mobile_image": "shopify://shop_images/Header_mobile_14_839c9258-c5b2-410f-9d70-bb9b32a526d1.jpg",
+            "text_position": "middle_center",
             "subheading": "",
-            "title": "Ohne Auslaufen durch den Tag - wild & elegant!",
-            "subtitle": "<p>Neues Premium-Update: Leo-Design trifft auf softes Mesh mit maximalem Schutz durch Fluid Protection® und Super Dry®.</p>",
+            "title": "Innovation: FemGrow© Panty",
+            "subtitle": "<p>FemGrow©: Super elastisches Material dehnt sich mit und findet nach der Schwangerschaft in seine Form zurück. Atmungsaktiv und nur aus natürlichen Materialien bestehend.</p>",
             "subtitle_html": "",
             "button_1_text": "",
             "button_1_link": "",
